Tablet version complete

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
     <div class = health>
       <h2> Hike 1,000 miles before I am thirty. </h2>
-      <img src= "img/hiking2.jpg" alt="Hiking">
+      <frame>
+        <img src= "img/hiking2.jpg" alt="Hiking">
+      </frame>
       </> <!--closing for image-->
     </div> <!--closing for health-->
 
@@ -61,20 +63,22 @@
 
     <div class = career>
       <h2> Break into a tech career, and freelance as a side hustle. </h2>
-      <img src = "img/computer.png" alt = "Computer">
-      </> <!--closing for image-->
+      <frame>
+        <img src = "img/computer.png" alt = "Computer"/>
+      </frame>
     </div> <!--closing for career-->
 
     <div class = selfie>
-
-      <img src= "img/climb.JPEG" alt="Ivy Picture">
-      </> <!--closing for image-->
+      <frame>
+        <img src= "img/climb.JPEG" alt="Ivy Picture"/>
+      </frame>
     </div> <!--closing for selfie-->
 
     <div class = travel>
       <h2> Visit a National Park or two... or five! </h2>
-      <img src="img/national-parks.png" alt= "Yellow Stone National Park">
-      </> <!--closing for image-->
+      <frame>
+        <img src="img/national-parks.png" alt= "Yellow Stone National Park"/>
+      </frame>
     </div> <!--closing for travel-->
 
     <div class = hustle>
@@ -84,16 +88,16 @@
 
     <div class = rescue>
       <h2> Rescue another puppy, so my dog can have a dog. </h2>
-      <div class="frame">
-        <img src="img/hiking.jpg" src="Dog">
-        </> <!--closing for image-->
-      </div> <!--closing for frame-->
+      <frame>
+        <img src="img/hiking.jpg" src="Dog"/>
+      </frame>
     </div> <!--rescue closer-->
 
     <div class = peace>
       <h2> Make the world a better place, even if it is in a small way.</h2>
-      <img src = "img/kindness.png" alt= "Kind hands">
-      </> <!--closing for image-->
+      <frame>
+        <img src = "img/kindness.png" alt= "Kind hands"/>
+      </frame> 
     </div><!--closer for peace-->
 
   </div> <!--content wrapper closer for entire body-->
