remade layout for 1200px screens. The image under selfie distorts, so that may need to be adjusted.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
   <h1> Welcome to Ivy's Inspiration Station! </h1>
   <div class = content-wrapper>
 
-    <div class = journey>
+    <div class = journey resize>
       <h2> Grow more </h2>
     </div> <!--closing for journey-->
 
-    <div class = health>
+    <div class = health resize>
       <h2> Hike 1,000 miles before I am thirty. </h2>
       <frame>
         <img src= "img/hiking2.jpg" alt="Hiking">
@@ -46,7 +46,7 @@
 
 
 
-    <div class = coding>
+    <div class = coding resize>
       <h2> Become proficient in the following: </h2>
       <ul>
         <li> HTML & CSS </li>
@@ -81,7 +81,7 @@
       </frame>
     </div> <!--closing for travel-->
 
-    <div class = hustle>
+    <div class = hustle >
       <h2> Increase my capital value by 50% between investing, my side hustle, and a new career in tech. </h2>
       <!--this one will be just text with background color-->
     </div> <!--closing for hustle-->
@@ -97,7 +97,7 @@
       <h2> Make the world a better place, even if it is in a small way.</h2>
       <frame>
         <img src = "img/kindness.png" alt= "Kind hands"/>
-      </frame> 
+      </frame>
     </div><!--closer for peace-->
 
   </div> <!--content wrapper closer for entire body-->
